feat: MainController에 사용자에게 당첨번호 입력받고 당첨로또 만드는 기능 구현